--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/Ieeebruce/VUE-wheels#readme",
   "dependencies": {
     "vue": "^2.6.7"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.11.0"
   }
 }
