--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.6.0",
+    "parcel": "^1.11.0",
     "parcel-bundler": "^1.11.0",
     "sass": "^1.17.2",
-    "vue-template-compiler": "^2.6.7"
+    "vue-template-compiler": "^2.6.8"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
