--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "UI框架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,21 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.6.0",
+    "chai": "^4.2.0",
+    "dependencies": "0.0.1",
+    "karma": "^4.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^6.0.2",
     "parcel": "^1.11.0",
     "parcel-bundler": "^1.11.0",
+    "peer": "^0.2.10",
     "sass": "^1.17.2",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.6.8"
   },
   "alias": {
