--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Ieeebruce/VUE-wheels#readme",
   "dependencies": {
+    "svg.js": "^2.7.1",
     "vue": "^2.6.8",
     "vue-hot-reload-api": "^2.3.3"
   },
