--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/Ieeebruce/VUE-wheels#readme",
   "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.29",
     "svg.js": "^2.7.1",
-    "vue": "^2.6.8",
+    "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
@@ -43,7 +44,7 @@
     "sass": "^1.17.2",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.10"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
