--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leihong-ui-01",
+  "name": "Bruce-UI",
   "version": "0.0.1",
   "description": "UI框架",
   "main": "index.js",
@@ -40,10 +40,12 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^6.0.2",
+    "node-sass": "^4.11.0",
     "parcel": "^1.11.0",
     "parcel-bundler": "^1.11.0",
     "peer": "^0.2.10",
-    "sass": "^1.17.2",
+    "sass": "^1.17.3",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.6.10",
